gruppo_d/force-app/main/default/objects/Conferenza__c/Conferenza__c.object-meta.xml
<CustomObject>
    <label>Conferenza</label>
    <nameField>
        <label>Nome Conferenza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conferenze</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>