gruppo_d/force-app/main/default/objects/Conferenza__c/fields/Luogo__c.field-meta.xml
<CustomField>
    <fullName>Luogo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Luogo</label>
    <referenceTo>Luogo__c</referenceTo>
    <relationshipLabel>Conferenze</relationshipLabel>
    <relationshipName>Luoghi_Conferenze</relationshipName>
    <type>Lookup</type>
</CustomField>