gruppo_d/force-app/main/default/objects/Conferenza__c/fields/Luogo_Conferenza__c.field-meta.xml
<CustomField>
    <fullName>Luogo_Conferenza__c</fullName>
    <label>Luogo Conferenza</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>