gruppo_d/force-app/main/default/objects/Conferenza__c/fields/Manifestazione__c.field-meta.xml
<CustomField>
    <fullName>Manifestazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manifestazione</label>
    <referenceTo>Manifestazione__c</referenceTo>
    <relationshipLabel>Conferenze</relationshipLabel>
    <relationshipName>Conferenze</relationshipName>
    <type>Lookup</type>
</CustomField>